add team api